@@ -248,4 +248,9 @@ Changes from 4.0.7 -> 4.0.8
    -- Applied modified version of maximum mages per building patch submitted
       by Paul Mehrer <paul.mehrer@web.de>
    -- Fixed a bug in the EASIER_UNDERWORLD code pointed out by
-      Steve (argentrune@yahoo.co.uk)
+      Stephen Baillie (baillie@cs.mu.oz.au) which caused it to only work on
+      level 0-2 inclusive.
+   -- Fixed a bug in IMPROVED_FARSIGHT code which was pointed out by Stephen
+      Baillie (baillie@cs.mu.oz.au) which caused it give odd results if
+      multiple mages from the same faction with different skills cast farsight
+      on the same hex during a turn.
